--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/swift,xcode,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=swift,xcode,visualstudiocode
 
+## DS_Store
+.DS_Store
+
 ### Swift ###
 # Xcode
 #
